# rly

./: Cargo.toml  README.md  Rocket.toml  build-cli.nu  build-gui.nu  build-server.nu  migrate.nu  release.nu  run.nu
assets/: style.scss
cli/: Cargo.toml
cli/src/: main.rs
gui/: Cargo.toml
gui/src/: gui.rs  main.rs
gui/static/: index.html  style.css  wasm.js  wasm_bg.wasm
server/: Cargo.toml
server/migrations/2020-09-04-180000_urls/: up.sql
server/src/: db.rs  main.rs  rlyurl.rs  schema.rs
