[package]
name = "rly-server"
version = "0.2.0"
authors = ["Michael Borejdo <mborejdo@gmail.com>"]
edition = "2021"

[dependencies]
clap = "3.0.0-beta.1"
rocket = "0.4.5"
rocket_codegen = "0.4.5"
harsh = "0.2.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
diesel = { version = "1.0.0", features = ["mysql", "r2d2"] }

[dependencies.rocket_contrib]
version = "0.4.5"
default_features = false
features = ["serve"]
